# ai-virtual-world

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: __init__.py  config.py  main.py  reset_world.py
backend/agents/: __init__.py  applier.py  base_agent.py  developer.py  news_agent.py  planner.py  product_manager.py  prompt_context.py  refactor.py  tester.py
backend/ai/: __init__.py  code_evolution.py  ollama_client.py
backend/data/: direction.json  news.json  world.json
backend/data/history/: world_20260308_003037.json  world_20260308_003339.json  world_20260308_003644.json  world_20260308_003944.json
backend/utils/: __init__.py  file_utils.py  git_utils.py
backend/workflow/: __init__.py  agent_graph.py
backend/world/: __init__.py  entities.py  events.py  physics.py  schemas.py  world_engine.py
docs/: index.html
docs/css/: style.css
docs/js/: api.js  direction.js  main.js  news.js  renderer.js
scripts/: docker-start.sh  setup.sh
tests/: test_frontend_panels.py
