[tool.poetry]
name = "ai-virtual-world"
version = "0.1.0"
description = "Autonomous AI-driven virtual world experiment"
authors = ["nebulinx"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
jsonschema = "^4.20.0"
gitpython = "^3.1.40"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
